--- a/Game.html
+++ b/Game.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="right-side">
-            <img src="./Assests/sapiens.png" alt="img">
+            <img src="sapiens.png" alt="img">
             <p class="day"> Day start with <b style="font-size: larger; color: rgb(232, 62, 62);">#Luck checker</b></p>
 
         
