--- a/Game.html
+++ b/Game.html
@@ -20,7 +20,7 @@
         <div class="main-div">
             <div class="head-name">
                 <h1>Luck checker</h1>
-                <p>*Give the number between 1 to 10</p>
+                <p class="">*Give the number between 1 to 10</p>
 
             </div>
 
@@ -47,7 +47,7 @@
             <img src="sapiens.png" alt="img">
             <p class="day"> Day start with <b style="font-size: larger; color: rgb(232, 62, 62);">#Luck checker</b></p>
 
-        
+
         </div>
 
     </div>
